Creacion de DF diccionario para PIB-ViajesOcasionales

--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -1722,9 +1722,63 @@
             ]
         },
         {
-            "cell_type": "markdown",
+            "cell_type": "code",
+            "execution_count": 12,
             "metadata": {},
-            "source": []
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "                                       region      macrozona abreviacion\n",
+                        "0                          Arica y Parinacota          Norte         AyP\n",
+                        "1                                    Tarapacá          Norte        TPCA\n",
+                        "2                                 Antofagasta          Norte       ANTOF\n",
+                        "3                                     Atacama          Norte       ATCMA\n",
+                        "4                                    Coquimbo         Centro         COQ\n",
+                        "5                                  Valparaíso         Centro       VALPO\n",
+                        "6                   Metropolitana de Santiago  Metropolitana          RM\n",
+                        "7       Libertador General Bernardo O'Higgins     Centro Sur        LGBO\n",
+                        "8                                       Maule     Centro Sur       MAULE\n",
+                        "9                                       Ñuble     Centro Sur       NUBLE\n",
+                        "10                                     Biobío     Centro Sur        BBIO\n",
+                        "11                               La Araucanía            Sur       ARAUC\n",
+                        "12                                   Los Ríos            Sur        RIOS\n",
+                        "13                                  Los Lagos            Sur       LAGOS\n",
+                        "14  Aysén del General Carlos Ibáñez del Campo        Austral       AYSEN\n",
+                        "15       Magallanes y de la Antártica Chilena        Austral        None\n"
+                    ]
+                }
+            ],
+            "source": [
+                "# Crear un DataFrame con las regiones, macrozonas y abreviaturas\n",
+                "data = {\n",
+                "    'region': [\n",
+                "        'Arica y Parinacota', 'Tarapacá', 'Antofagasta', \n",
+                "        'Atacama', 'Coquimbo', 'Valparaíso', \n",
+                "        'Metropolitana de Santiago', \"Libertador General Bernardo O'Higgins\", \n",
+                "        'Maule', 'Ñuble', 'Biobío', \n",
+                "        'La Araucanía', 'Los Ríos', 'Los Lagos', \n",
+                "        'Aysén del General Carlos Ibáñez del Campo', \n",
+                "        'Magallanes y de la Antártica Chilena'\n",
+                "    ],\n",
+                "    'macrozona': [\n",
+                "        'Norte', 'Norte', 'Norte', 'Norte', 'Centro', 'Centro', \n",
+                "        'Metropolitana', 'Centro Sur', 'Centro Sur', 'Centro Sur', \n",
+                "        'Centro Sur', 'Sur', 'Sur', 'Sur', 'Austral', 'Austral'\n",
+                "    ],\n",
+                "    'abreviacion': [\n",
+                "        'AyP', 'TPCA', 'ANTOF', 'ATCMA', 'COQ', 'VALPO', 'RM', \n",
+                "        'LGBO', 'MAULE', 'NUBLE', 'BBIO', 'ARAUC', 'RIOS', 'LAGOS', 'AYSEN', None\n",
+                "    ]\n",
+                "}\n",
+                "\n",
+                "# Crear el DataFrame\n",
+                "df_regiones = pd.DataFrame(data)\n",
+                "\n",
+                "# Mostrar el DataFrame\n",
+                "print(df_regiones)"
+            ]
         }
     ],
     "metadata": {
